<resources>
    <string name="app_name">HackCentroFox</string>
    <string name="login">Iniciar sesión</string>
    <string name="password">Contraseña</string>
    <string name="log_in_in_email">Dirección de correo electrónico.</string>
    <string name="no_tienes_cuenta">¿Aún no tienes cuenta?</string>
    <string name="registrate_para_hacer">¡Regístrate para hacer tu compra!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_fingerprint">One-touch Inicia sesion</string>
    <string name="desc_fingerprint">Please place your fingertip on the scanner to verify your identity</string>
    <string name="note">(Fingerprint sign in makes your app login much faster. Your device should have at least one fingerprint registered in device settings)</string>
    <string name="title_activity_home">Fingerprint</string>
    <string name="activity_home_desc">You have successfully logged in with fingerprint authentication</string>
    <string name="activity_home_note">Close and re-open the app to see the fingerprint auth screen again</string>
    <string name="accept">Aceptar</string>
    <string name="great">Excelente</string>
    <string name="good_request">Solicitud exitosa!</string>
    <string name="no_internet_access">No hay internet!</string>
    <string name="need_internet">Necesitas internet para pdoer acceder!</string>
    <string name="retry">Reintentar</string>
    <string name="ups">Ups!</string>
    <string name="no_conection">No hay conexion</string>
    <string name="insert_finger_print">Inserta tu huella digital.</string>
    <string name="log_in_with_finger">Puedes acceder ingresando con tu huella digital.</string>
    <string name="rout">Rutas</string>
    <string name="looking_routes">¿Deseas ver las rutas disponibles o publicar una ruta?</string>
    <string name="search">Buscar</string>
    <string name="publish">Publicar</string>
    <string name="install_app">Por favor, instala un administrador de archivos.</string>
    <string name="expire_date">Seleccionar fecha de caducidad.</string>
    <string name="ok">Ok</string>
    <string name="category">Selecciona una categoría.</string>
    <string name="name">Ingrese el nombre del producto</string>
    <string name="price">Por último ingrese el costo del producto.</string>
    <string name="donation_destiny">Seleccione el destino de la donación</string>
    <string name="choose">Seleccionar</string>
    <string name="donationConcept">Ingrese el concepto de la donación</string>
    <string name="thanks">¡Muchas gracias!</string>
    <string name="GOOGLE_KEY">AIzaSyDItTXHe5At_rXcmBPELnDXBOwtlpWFJVs</string>
    <string name="hint_first_address">Dirección de salida.</string>
    <string name="hint_second_address">Dirección de destino final.</string>
    <string name="quantyty">Espacio en m2</string>
    <string name="auth_failed">No se pudo inicia sesión</string>
    <string name="place">Lugar de procedencia</string>
    <string name="nombre_simple">Nombre</string>
    <string name="wish_to_buy">¿Deseas solicitar este viaje para algún cargamento?</string>
    <string name="cancel">Cancelar</string>
    <string name="price_rout">Por último menciona el costo del viaje.</string>
</resources>
