<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_corn"
            android:layout_marginTop="20dp"
            android:layout_above="@+id/et_email_login"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"/>
        <EditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="eder.padilla97@gmail.com"
            android:layout_centerInParent="true"
            android:inputType="textEmailAddress"
            android:id="@+id/et_email_login"
            android:elevation="@dimen/dimen_10dp"
            android:layout_gravity="center"
            android:background="@drawable/et_background"
            android:hint="@string/log_in_in_email"
            android:textColorHint="@color/colorAccent"/>
        <EditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:elevation="@dimen/dimen_10dp"
            android:gravity="center"
            android:layout_below="@id/et_email_login"
            android:inputType="textPassword"
            android:layout_centerInParent="true"
            android:hint="@string/password"
            android:id="@+id/et_email_password"
            android:layout_gravity="center"
            android:textColorHint="@color/colorAccent"
            android:background="@drawable/et_background"/>

        <TextView
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:elevation="@dimen/dimen_10dp"
            android:layout_centerInParent="true"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_below="@id/et_email_password"
            android:clickable="true"
            android:id="@+id/btn_log_in"
            android:layout_gravity="center"
            android:background="@drawable/access_button_ripple"
            android:text="@string/login"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="20dp"
            android:gravity="center|bottom"
            android:layout_centerInParent="true"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_below="@id/btn_log_in"
            android:clickable="true"
            android:id="@+id/tv_register"
            android:layout_gravity="center"
            android:text="@string/no_tienes_cuenta"/>


        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/img_fingerprint"
            app:srcCompat="@drawable/ic_fingerprint"
            android:layout_below="@+id/tv_register"
            android:clickable="true"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:contentDescription="inicia sesion tu huella"
            android:layout_centerInParent="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:gravity="center|bottom"
            android:layout_centerInParent="true"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_below="@id/img_fingerprint"
            android:clickable="true"
            android:id="@+id/one_touch"
            android:layout_gravity="center"
            android:text="@string/title_fingerprint"/>

    </RelativeLayout>


</FrameLayout>

